# NeuralAmpModelerCore

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE  NOTES  README.md  TICKET-NOTES.md  benchmark_report.txt  format.sh  generate_weights_a2.py
.github/workflows/: build.yml  integration-tests.yml
Dependencies/: info.txt
Dependencies/nlohmann/: json.hpp
NAM/: activations.cpp  activations.h  compiler.h  container.cpp  container.h  conv1d.cpp  conv1d.h  conv1d_factory.cpp  conv1d_factory.h  conv1d_fixed.h  conv1x1_factory.cpp  conv1x1_factory.h  conv1x1_fixed.h  convnet.cpp  convnet.h  dsp.cpp  dsp.h  fast_lut.h  film.h  gating_activations.h  get_dsp.cpp  get_dsp.h  get_dsp_namb.cpp  get_dsp_namb.h  index.h  linear.cpp  linear.h  lstm.cpp  lstm.h  model_config.h  nam_c_api.cpp  nam_c_api.h  namb_format.h  profiling.cpp  profiling.h  registry.h  ring_buffer.cpp  ring_buffer.h  sequential.cpp  sequential.h  (+8 more)
NAM/wavenet/: a2_fast.cpp  a2_fast.h  detail.h  model.cpp  model.h  params.h  slimmable.cpp  slimmable.h
docs/: conf.py  index.rst  nam_file_version.rst  requirements.txt  wavenet_walkthrough.rst
docs/api/: activations.rst  conv1d.rst  convnet.rst  dsp.rst  film.rst  gating_activations.rst  get_dsp.rst  index.rst  lstm.rst  ring_buffer.rst  util.rst  wavenet.rst
dsp/: ImpulseResponse.cpp  ImpulseResponse.h  NoiseGate.cpp  NoiseGate.h  RecursiveLinearFilter.cpp  RecursiveLinearFilter.h  Resample.h  dsp.cpp  dsp.h  get_dsp.cpp  lstm.cpp  lstm.h  version.h  wav.cpp  wav.h  wavenet.cpp  wavenet.h
example_models/: A2.nam  lstm.nam  sequential.nam  slimmable_container.nam  slimmable_wavenet.nam  wavenet.nam  wavenet_a2_max.nam  wavenet_condition_dsp.nam
tools/: CMakeLists.txt  bench_a2_fast.cpp  bench_conv1x1_groups.cpp  bench_linear.cpp  benchmark_compare.sh  benchmark_convolution.cpp  benchmark_fully_fixed_conv.cpp  benchmark_wavenet_a1.sh  benchmodel.cpp  benchmodel_bufsize.cpp  c_api_example.cpp  check_conv1d_grouped.cpp  create_wavenet.py  loadmodel.cpp  memory_usage.cpp  nam2namb.cpp  plot_convolution_benchmark.py  plot_wavenet_a1_benchmark.py  render.cpp  run_tests.cpp
tools/test/: allocation_tracking.cpp  allocation_tracking.h  test_a2_fast.cpp  test_activations.cpp  test_blending_detailed.cpp  test_container.cpp  test_conv1d.cpp  test_conv1d_fixed.cpp  test_conv1x1_fixed.cpp  test_conv_1x1.cpp  test_convnet.cpp  test_dsp.cpp  test_extensible.cpp  test_fast_lut.cpp  test_film.cpp  test_film_realtime_safe.cpp  test_fully_fixed_correctness.cpp  test_gating_activations.cpp  test_get_dsp.cpp  test_input_buffer_verification.cpp  test_linear.cpp  test_lstm.cpp  test_lstm_realtime_safe.cpp  test_namb.cpp  test_noncontiguous_blocks.cpp  test_render_slim.cpp  test_ring_buffer.cpp  test_sequential.cpp  test_slimmable_wavenet.cpp  test_wavenet.cpp  test_wavenet_configurable_gating.cpp  test_wavenet_gating_compatibility.cpp
tools/test/test_wavenet/: test_condition_processing.cpp  test_factory.cpp  test_full.cpp  test_head1x1.cpp  test_kernel_sizes.cpp  test_layer.cpp  test_layer1x1.cpp  test_layer_array.cpp  test_layer_head_config.cpp  test_output_head.cpp  test_real_time_safe.cpp
ui/: .gitignore  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  postcss-scope-tailwind.cjs  postcss.config.cjs  rollup.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
ui/public/: t3k-wasm-module.aw.js  t3k-wasm-module.js  t3k-wasm-module.wasm  t3k-wasm-module.worker.js  t3k-wasm-module.ww.js
ui/public/models/: ac10.nam  ampeg.nam  ampeg_fliptop_a2.nam  deluxe.nam  dumble.nam  jc.nam  jcm.nam  mesa_rectifier_a2.nam
ui/src/: index.css  index.ts  preview.tsx
ui/src/components/: MeterTest.tsx  T3kDisabledPlayer.tsx  T3kPlayer.tsx
ui/src/components/ControlStrip/: InputControlStrip.tsx  index.ts
ui/src/components/InputControlStrip/: index.tsx
ui/src/components/LiveSetupDialog/: index.tsx
ui/src/components/LiveSetupDialog/content/: LiveDeviceChannelContent.tsx  LivePermissionContent.tsx
ui/src/components/Player/: AcordianPlayer.tsx  InputControls.tsx  LiveTakeover.tsx  PlayLiveTakeover.tsx  Player.tsx  PlayerSettings.tsx  PlayerSkeleton.tsx  SlimPlayer.tsx
ui/src/components/SettingsDialog/: index.tsx
ui/src/components/SettingsDialog/content/: DeviceChannelContent.tsx  DeviceContent.tsx  PermissionContent.tsx
ui/src/components/ui/: Alert.tsx  Button.tsx  CircularLoader.tsx  ClipIndicator.tsx  Demo.tsx  DemoPlaybar.tsx  Dialog.tsx  DisabledPlaybar.tsx  GainControl.tsx  Guitar.tsx  InlineAlert.tsx  InputMeter.tsx  Interface.tsx  KnobControl.tsx  KnobInner.tsx  LevelMeter.tsx  LivePlaybar.tsx  LogoSm.tsx  MonitorButton.tsx  Mute.tsx  Pause.tsx  Play.tsx  PlayIcon.tsx  PlayPlaybar.tsx  Radio.tsx  SegmentedControl.tsx  Select.tsx  Skip.tsx  Tabs.tsx  ToggleSimple.tsx
ui/src/constants/: index.ts
ui/src/context/: T3kPlayerContext.tsx  T3kPlayerProvider.tsx
ui/src/hooks/: useAudioDevicesAndPermissions.ts  useLiveMode.ts  useMeterAnimation.ts  useModule.ts  usePlayerCore.ts  useSourceMode.ts  useToast.ts
ui/src/types/: index.ts
ui/src/utils/: audioNodes.ts  browser.ts  devices.ts  metering.ts  player.ts  readModel.ts  readProfile.ts  visualizer.ts
wasm/: CMakeLists.txt  build.bash  t3k-wasm-model.cpp  t3k-wasm-model.patch  t3k-wasm-module.cpp  t3k-wasm-module.patch
